--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -11,6 +11,7 @@
     "maintained node versions"
   ],
   "scripts": {
+    "build": "wrangler deploy --dry-run --outdir=dist",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev",
