--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -17,19 +17,19 @@
   "dependencies": {
     "@ethang/hooks": "workspace:^",
     "@heroicons/react": "^2.2.0",
-    "@nextui-org/avatar": "^2.2.6",
-    "@nextui-org/button": "^2.2.9",
-    "@nextui-org/card": "^2.2.9",
-    "@nextui-org/divider": "^2.2.5",
-    "@nextui-org/image": "^2.2.5",
-    "@nextui-org/link": "^2.2.7",
-    "@nextui-org/modal": "^2.2.7",
-    "@nextui-org/navbar": "^2.2.8",
-    "@nextui-org/react": "^2.6.11",
-    "@nextui-org/system": "^2.4.6",
-    "@nextui-org/table": "^2.2.8",
-    "@nextui-org/theme": "^2.4.5",
-    "@nextui-org/user": "^2.2.6",
+    "@heroui/avatar": "2.2.6",
+    "@heroui/button": "2.2.9",
+    "@heroui/card": "2.2.9",
+    "@heroui/divider": "2.2.5",
+    "@heroui/image": "2.2.5",
+    "@heroui/link": "2.2.7",
+    "@heroui/modal": "2.2.7",
+    "@heroui/navbar": "2.2.8",
+    "@heroui/react": "2.6.13",
+    "@heroui/system": "2.4.6",
+    "@heroui/table": "2.2.8",
+    "@heroui/theme": "2.4.5",
+    "@heroui/user": "2.2.6",
     "@portabletext/react": "^3.2.0",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
