--- a/apps/ethang-angular/package.json
+++ b/apps/ethang-angular/package.json
@@ -40,6 +40,7 @@
     "ms": "^2.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "ua-parser-js": "^2.0.0",
     "uuid": "^11.0.5",
     "zod": "^3.24.1",
     "zone.js": "~0.15.0"
