--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9.18.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "workbox-build": "^7.3.0"
   }
 }
