--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "http-server dist",
     "build": "bun src/index.ts",
     "lint": "prettier src --write && eslint src --fix"
   },
@@ -30,6 +31,7 @@
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
     "eslint": "^9.18.0",
+    "http-server": "^14.1.1",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
