--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -20,7 +20,8 @@
     "@ethang/toolbelt": "workspace:^",
     "highlight.js": "^11.11.1",
     "html-minifier-terser": "^7.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
@@ -28,6 +29,7 @@
     "@types/html-minifier-terser": "^7.0.2",
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.7",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.23",
     "eslint": "^9.18.0",
