--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -22,13 +22,12 @@
     "@eslint/js": "^9.19.0",
     "@eslint/json": "^0.10.0",
     "@eslint/markdown": "^6.2.2",
-    "@stylistic/eslint-plugin": "^3.0.0",
-    "@stylistic/eslint-plugin-ts": "^3.0.0",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@tanstack/eslint-plugin-router": "^1.97.8",
     "@typescript-eslint/parser": "^8.21.0",
     "angular-eslint": "19.0.2",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-barrel-files": "^2.1.0",
     "eslint-plugin-compat": "^6.0.2",
@@ -37,6 +36,7 @@
     "eslint-plugin-lodash": "^8.0.0",
     "eslint-plugin-n": "^17.15.1",
     "eslint-plugin-perfectionist": "^4.7.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-solid": "^0.14.5",
