--- a/apps/rss/package.json
+++ b/apps/rss/package.json
@@ -10,6 +10,7 @@
 		"eslint": "^9.20.0",
 		"hono": "^4.7.0",
 		"lodash": "^4.17.21",
+		"rss-to-json": "^2.1.1",
 		"uuid": "^11.0.5",
 		"zod": "^3.23.8"
 	},
