--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -4,16 +4,25 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-router": "^1.102.1",
+    "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
+    "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250204.0",
@@ -21,6 +30,7 @@
     "@tanstack/router-devtools": "^1.102.1",
     "@tanstack/router-plugin": "^1.102.2",
     "@types/lodash": "^4.17.15",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -34,6 +44,9 @@
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
     "wrangler": "^3.108.0"
+  },
+  "engines": {
+    "node": ">= 22"
   },
   "name": "job-search",
   "private": true,
