--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -10,10 +10,12 @@
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@tanstack/react-router": "^1.102.1",
+    "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.2",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
