--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
+    "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
