--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -7,6 +7,7 @@
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
