--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -4,18 +4,16 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@hookform/resolvers": "^4.0.0",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@heroui/react": "2.6.14",
+    "@heroui/system": "2.4.7",
+    "@heroui/theme": "2.4.6",
+    "@tanstack/react-form": "^0.42.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
     "@tanstack/react-router": "^1.104.1",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.2",
     "idb": "^8.0.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
@@ -24,10 +22,8 @@
     "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
     "zod": "^3.24.2"
   },
