--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -7,9 +7,11 @@
     "@heroui/react": "2.6.14",
     "@heroui/system": "2.4.7",
     "@heroui/theme": "2.4.6",
+    "@tanstack/query-sync-storage-persister": "^5.66.0",
     "@tanstack/react-form": "^0.42.0",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-query-persist-client": "^5.66.0",
     "@tanstack/react-router": "^1.104.1",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.2",
@@ -19,6 +21,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "luxon": "^3.5.0",
+    "ms": "^2.1.3",
     "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,6 +38,7 @@
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.15",
     "@types/luxon": "^3.4.2",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
