--- a/apps/job-search-sync/package.json
+++ b/apps/job-search-sync/package.json
@@ -5,8 +5,10 @@
   ],
   "dependencies": {
     "@clerk/backend": "^1.24.1",
+    "@ethang/schemas": "workspace:^",
     "@ethang/toolbelt": "workspace:^",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.6.4",
@@ -15,7 +17,7 @@
     "@types/lodash": "^4.17.15",
     "eslint": "^9.20.1",
     "typescript": "^5.5.2",
-    "vitest": "~2.1.9",
+    "vitest": "~3.0.5",
     "wrangler": "^3.109.1"
   },
   "name": "job-search-sync",
@@ -24,8 +26,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest"
+    "start": "wrangler dev"
   },
   "type": "module",
   "version": "0.0.0"
