--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@cortex-js/compute-engine": "^0.28.0",
     "@ethang/hooks": "workspace:2.2.6-beta.0",
+    "@ethang/schemas": "workspace:^",
     "@ethang/store": "workspace:^",
     "@ethang/toolbelt": "workspace:^",
     "@heroui/react": "2.6.14",
