--- a/apps/ethang-vanilla/package.json
+++ b/apps/ethang-vanilla/package.json
@@ -1,21 +1,9 @@
 {
-  "name": "ethang-vanilla",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "http-server dist",
-    "build": "bun src/index.ts",
-    "lint": "eslint src --fix"
-  },
+  "author": "",
   "browserslist": [
     "defaults and fully supports es6-module",
     "maintained node versions"
   ],
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@ethang/toolbelt": "workspace:^",
     "highlight.js": "^11.11.1",
@@ -23,6 +11,7 @@
     "lodash": "^4.17.21",
     "uuid": "^11.0.5"
   },
+  "description": "",
   "devDependencies": {
     "@ethang/eslint-config": "workspace:^",
     "@tailwindcss/typography": "^0.5.16",
@@ -37,5 +26,16 @@
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
     "workbox-build": "^7.3.0"
-  }
+  },
+  "keywords": [],
+  "license": "ISC",
+  "main": "index.js",
+  "name": "ethang-vanilla",
+  "scripts": {
+    "build": "bun src/index.ts",
+    "dev": "pnpm build && http-server dist",
+    "lint": "pnpx prettier src -w && eslint src --fix"
+  },
+  "type": "module",
+  "version": "1.0.0"
 }
