--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
     "@ethang/eslint-config": "workspace:^",
+    "@react-types/shared": "^3.27.0",
     "@tanstack/router-devtools": "^1.105.0",
     "@tanstack/router-plugin": "^1.105.0",
     "@total-typescript/ts-reset": "^0.6.1",
