--- a/apps/job-search/package.json
+++ b/apps/job-search/package.json
@@ -5,7 +5,7 @@
   ],
   "dependencies": {
     "@cortex-js/compute-engine": "^0.28.0",
-    "@ethang/hooks": "workspace:2.2.6-beta.0",
+    "@ethang/hooks": "^2.2.7",
     "@ethang/schemas": "workspace:^",
     "@ethang/store": "workspace:^",
     "@ethang/toolbelt": "^4.3.2",
