--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -15,7 +15,7 @@
     "maintained node versions"
   ],
   "dependencies": {
-    "@ethang/hooks": "workspace:^",
+    "@ethang/hooks": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@heroui/avatar": "2.2.7",
     "@heroui/button": "2.2.10",
