--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ethang/hooks",
-  "version": "2.2.6-beta.0",
+  "version": "2.2.7",
   "description": "",
   "repository": "https://github.com/eglove/hooks",
   "license": "ISC",
