--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.1.0",
-    "@ethang/eslint-config": "^21.9.2",
+    "@ethang/eslint-config": "^21.11.0",
     "@tanstack/router-plugin": "^1.119.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
@@ -41,8 +41,8 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.7.2",
+    "tailwindcss": "<4",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
     "wrangler": "^4.14.1"
@@ -54,7 +54,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
-    "lint": "eslint . --fix",
+    "lint": "eslint src --fix",
     "preview": "pnpm run build && vite preview"
   },
   "type": "module",
