--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -14,27 +14,27 @@
     "@internationalized/date": "^3.8.2",
     "@prisma/adapter-d1": "^6.10.1",
     "@prisma/client": "^6.10.1",
-    "@tanstack/query-async-storage-persister": "^5.81.2",
-    "@tanstack/react-form": "^1.12.3",
-    "@tanstack/react-query": "^5.81.2",
-    "@tanstack/react-query-devtools": "^5.81.2",
-    "@tanstack/react-query-persist-client": "^5.81.2",
-    "@tanstack/react-router": "^1.121.34",
-    "@tanstack/react-router-devtools": "^1.121.34",
+    "@tanstack/query-async-storage-persister": "^5.81.4",
+    "@tanstack/react-form": "^1.12.4",
+    "@tanstack/react-query": "^5.81.4",
+    "@tanstack/react-query-devtools": "^5.81.4",
+    "@tanstack/react-query-persist-client": "^5.81.4",
+    "@tanstack/react-router": "^1.121.41",
+    "@tanstack/react-router-devtools": "^1.121.41",
     "@uidotdev/usehooks": "^2.4.1",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.1",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.523.0",
+    "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
     "ms": "^2.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "recharts": "^3.0.0",
+    "recharts": "^3.0.2",
     "tailwind-merge": "<3",
     "use-debounce": "^10.0.5",
     "use-sync-external-store": "^1.5.0",
@@ -44,10 +44,10 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
     "@eslint/js": "^9.29.0",
-    "@ethang/eslint-config": "^22.13.4",
+    "@ethang/eslint-config": "^22.13.5",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/router-plugin": "^1.121.37",
+    "@tanstack/router-plugin": "^1.121.41",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.19",
@@ -59,7 +59,7 @@
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
     "browserslist-config-baseline": "^0.4.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.0",
     "eslint": "^9.29.0",
     "jiti": "^2.4.2",
     "postcss": "^8.5.6",
@@ -68,7 +68,7 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.2.4",
     "wrangler": "^4.22.0"
