--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -12,15 +12,15 @@
     "@heroui/theme": "2.4.17",
     "@prisma/adapter-d1": "^6.10.1",
     "@prisma/client": "^6.10.1",
-    "@tanstack/query-async-storage-persister": "^5.81.2",
-    "@tanstack/react-query": "^5.81.2",
-    "@tanstack/react-query-persist-client": "^5.81.2",
-    "@tanstack/react-router": "^1.121.34",
-    "@tanstack/react-router-devtools": "^1.121.34",
-    "framer-motion": "^12.19.1",
+    "@tanstack/query-async-storage-persister": "^5.81.4",
+    "@tanstack/react-query": "^5.81.4",
+    "@tanstack/react-query-persist-client": "^5.81.4",
+    "@tanstack/react-router": "^1.121.41",
+    "@tanstack/react-router-devtools": "^1.121.41",
+    "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.523.0",
+    "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -32,8 +32,8 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
-    "@ethang/eslint-config": "^22.13.4",
-    "@tanstack/router-plugin": "^1.121.37",
+    "@ethang/eslint-config": "^22.13.5",
+    "@tanstack/router-plugin": "^1.121.41",
     "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
@@ -50,7 +50,7 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "vite-plugin-pwa": "^1.0.0",
     "wrangler": "^4.22.0"
   },
