--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -22,15 +22,15 @@
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
-    "@tanstack/query-async-storage-persister": "^5.81.2",
-    "@tanstack/query-sync-storage-persister": "^5.81.2",
-    "@tanstack/react-query": "^5.81.2",
-    "@tanstack/react-query-devtools": "^5.81.2",
-    "@tanstack/react-query-persist-client": "^5.81.2",
-    "@tanstack/react-router": "^1.121.34",
-    "@tanstack/router-devtools": "^1.121.34",
+    "@tanstack/query-async-storage-persister": "^5.81.4",
+    "@tanstack/query-sync-storage-persister": "^5.81.4",
+    "@tanstack/react-query": "^5.81.4",
+    "@tanstack/react-query-devtools": "^5.81.4",
+    "@tanstack/react-query-persist-client": "^5.81.4",
+    "@tanstack/react-router": "^1.121.41",
+    "@tanstack/router-devtools": "^1.121.41",
     "calendar-link": "^2.11.0",
-    "framer-motion": "^12.19.1",
+    "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
     "luxon": "^3.6.1",
@@ -43,7 +43,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.13.4",
+    "@ethang/eslint-config": "^22.13.5",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.30.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -60,12 +60,12 @@
     "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.29.0",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.1",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "vite-plugin-pwa": "^1.0.0"
   },
   "engines": {
