--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -6,18 +6,18 @@
     "@ethang/toolbelt": "^4.4.10",
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
-    "@tanstack/query-async-storage-persister": "^5.81.2",
-    "@tanstack/react-query": "^5.81.2",
-    "@tanstack/react-query-devtools": "^5.81.2",
-    "@tanstack/react-query-persist-client": "^5.81.2",
-    "@tanstack/react-router": "^1.121.34",
-    "@tanstack/react-router-devtools": "^1.121.34",
+    "@tanstack/query-async-storage-persister": "^5.81.4",
+    "@tanstack/react-query": "^5.81.4",
+    "@tanstack/react-query-devtools": "^5.81.4",
+    "@tanstack/react-query-persist-client": "^5.81.4",
+    "@tanstack/react-router": "^1.121.41",
+    "@tanstack/react-router-devtools": "^1.121.41",
     "d1-orm": "^0.9.2",
-    "dotenv": "^16.5.0",
-    "framer-motion": "^12.19.1",
+    "dotenv": "^16.6.0",
+    "framer-motion": "^12.19.2",
     "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.523.0",
+    "lucide-react": "^0.525.0",
     "luxon": "^3.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
-    "@ethang/eslint-config": "^22.13.4",
-    "@tanstack/router-plugin": "^1.121.37",
+    "@ethang/eslint-config": "^22.13.5",
+    "@tanstack/router-plugin": "^1.121.41",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
@@ -44,7 +44,7 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "wrangler": "^4.22.0"
   },
   "name": "react-vite",
