--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,8 +12,8 @@
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
     "@internationalized/date": "^3.8.2",
-    "@prisma/adapter-d1": "^6.11.0",
-    "@prisma/client": "^6.11.0",
+    "@prisma/adapter-d1": "^6.11.1",
+    "@prisma/client": "^6.11.1",
     "@tanstack/query-async-storage-persister": "^5.81.5",
     "@tanstack/react-form": "^1.12.4",
     "@tanstack/react-query": "^5.81.5",
@@ -39,10 +39,10 @@
     "use-debounce": "^10.0.5",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.73"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.8.0",
+    "@cloudflare/vite-plugin": "^1.9.0",
     "@eslint/js": "^9.30.1",
     "@ethang/eslint-config": "^22.13.9",
     "@tailwindcss/typography": "^0.5.16",
@@ -63,15 +63,15 @@
     "eslint": "^9.30.1",
     "jiti": "^2.4.2",
     "postcss": "^8.5.6",
-    "prisma": "^6.11.0",
+    "prisma": "^6.11.1",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "<7",
+    "vite": "^7.0.2",
     "vite-plugin-pwa": "^1.0.1",
     "vitest": "^3.2.4",
-    "wrangler": "^4.22.0"
+    "wrangler": "^4.23.0"
   },
   "engines": {
     "node": ">=22"
