--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -10,8 +10,8 @@
     "@ethang/toolbelt": "^4.4.10",
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
-    "@prisma/adapter-d1": "^6.11.0",
-    "@prisma/client": "^6.11.0",
+    "@prisma/adapter-d1": "^6.11.1",
+    "@prisma/client": "^6.11.1",
     "@tanstack/query-async-storage-persister": "^5.81.5",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-query-persist-client": "^5.81.5",
@@ -28,10 +28,10 @@
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "<3",
     "uuid": "^11.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.73"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.8.0",
+    "@cloudflare/vite-plugin": "^1.9.0",
     "@ethang/eslint-config": "^22.13.9",
     "@tanstack/router-plugin": "^1.124.0",
     "@types/lodash": "^4.17.20",
@@ -45,14 +45,14 @@
     "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "prisma": "^6.11.0",
+    "prisma": "^6.11.1",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "<7",
+    "vite": "^7.0.2",
     "vite-plugin-pwa": "^1.0.1",
-    "wrangler": "^4.22.0"
+    "wrangler": "^4.23.0"
   },
   "engines": {
     "node": ">=22"
