--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -40,7 +40,7 @@
     "react-dom": "^19.1.0",
     "sanity-image": "^1.0.0",
     "tailwind-merge": "<3",
-    "zod": "^3.25.67"
+    "zod": "^3.25.73"
   },
   "devDependencies": {
     "@ethang/eslint-config": "^22.13.9",
@@ -65,7 +65,7 @@
     "tailwindcss": "<4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "<7",
+    "vite": "^7.0.2",
     "vite-plugin-pwa": "^1.0.1"
   },
   "engines": {
