--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     ],
     "overrides": {
       "tailwind-merge": "<3",
-      "tailwindcss": "<4",
-      "vite": "<7"
+      "tailwindcss": "<4"
     }
   },
   "scripts": {
