--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -23,10 +23,10 @@
     "react-dom": "^19.0.0",
     "uuid": "^11.1.0",
     "vite-plugin-pwa": "^1.0.1",
-    "zod": "^3.25.67"
+    "zod": "^3.25.73"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.8.0",
+    "@cloudflare/vite-plugin": "^1.9.0",
     "@ethang/eslint-config": "^22.13.9",
     "@tanstack/router-plugin": "^1.124.0",
     "@total-typescript/ts-reset": "^0.6.1",
@@ -44,8 +44,8 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "<7",
-    "wrangler": "^4.22.0"
+    "vite": "^7.0.2",
+    "wrangler": "^4.23.0"
   },
   "name": "react-vite",
   "private": true,
