--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -4,13 +4,13 @@
     "extends browserslist-config-baseline"
   ],
   "dependencies": {
-    "@ethang/toolbelt": "^4.4.10",
+    "@ethang/toolbelt": "^4.4.11",
     "idb": "^8.0.2",
     "lodash": "^4.17.21",
     "zod": "^4.0.0"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.13.12",
+    "@ethang/eslint-config": "^22.14.0",
     "@ethang/project-builder": "^3.0.2",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.20",
@@ -20,10 +20,13 @@
   },
   "license": "ISC",
   "name": "@ethang/fetch",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "bun build.ts",
     "lint": "eslint src --fix"
   },
   "type": "module",
-  "version": "1.0.0"
+  "version": "1.0.2"
 }
