--- a/apps/network-combine/package.json
+++ b/apps/network-combine/package.json
@@ -4,11 +4,16 @@
     "current node"
   ],
   "dependencies": {
+    "@heroui/react": "2.7.11",
+    "@heroui/theme": "2.4.17",
+    "@tanstack/react-query": "^5.82.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "framer-motion": "^12.23.3",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@ethang/eslint-config": "^22.14.0",
