--- a/apps/network-manager/package.json
+++ b/apps/network-manager/package.json
@@ -4,7 +4,6 @@
     "current node"
   ],
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
     "@tanstack/react-query": "^5.82.0",
@@ -12,6 +11,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "framer-motion": "^12.23.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0"
@@ -35,7 +35,7 @@
   "engines": {
     "node": ">=22"
   },
-  "name": "network-combine",
+  "name": "network-manager",
   "private": true,
   "scripts": {
     "build": "tsc && vite build",
