--- a/apps/sterett-client/tsconfig.json
+++ b/apps/sterett-client/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "types": [
-      "./worker-configuration.d.ts"
-    ]
+    "types": ["./worker-configuration.d.ts"]
   },
-  "extends": [
-    "../../packages/tsconfig/tsconfig.react.json"
-  ]
+  "extends": ["../../packages/tsconfig/tsconfig.react.json"]
 }
