--- a/apps/sterett-client/package.json
+++ b/apps/sterett-client/package.json
@@ -27,13 +27,13 @@
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
     "sanity-image": "^1.0.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "<3",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.9.4",
     "@ethang/eslint-config": "^22.15.0",
-    "@tanstack/router-plugin": "^1.127.3",
+    "@tanstack/router-plugin": "^1.127.5",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.20",
     "@types/luxon": "^3.6.2",
@@ -47,7 +47,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.0",
