--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^22.15.0",
-    "@types/node": "^24.0.13",
+    "@ethang/eslint-config": "^22.15.2",
+    "@types/node": "^24.0.14",
     "eslint": "^9.31.0",
-    "typescript-eslint": "^8.36.0"
+    "typescript-eslint": "^8.37.0"
   },
   "license": "ISC",
   "name": "ethang-monorepo",
@@ -27,7 +27,7 @@
     "overrides": {
       "tailwind-merge": "<3",
       "tailwindcss": "<4",
-      "rollup": "<4.45.0"
+      "rollup": ">4.45.0"
     }
   },
   "scripts": {
