--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -5,6 +5,9 @@
   ],
   "dependencies": {
     "@heroui/react": "2.8.1",
+    "@heroui/theme": "2.4.19",
+    "@tanstack/react-router": "^1.127.9",
+    "@tanstack/react-router-devtools": "^1.127.9",
     "framer-motion": "^12.23.6",
     "lodash": "^4.17.21",
     "react": "^19.1.0",
@@ -14,6 +17,8 @@
     "@cloudflare/vite-plugin": "^1.9.4",
     "@eslint/js": "^9.29.0",
     "@ethang/eslint-config": "^22.15.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/router-plugin": "^1.127.9",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
