--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -4,16 +4,21 @@
     "current node"
   ],
   "dependencies": {
+    "@ethang/store": "^2.3.1",
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.1",
     "@heroui/theme": "2.4.19",
     "@hono/zod-validator": "^0.7.1",
+    "@hyper-fetch/core": "^7.2.5",
+    "@hyper-fetch/react": "^7.2.5",
     "@prisma/adapter-d1": "^6.12.0",
+    "@prisma/client": "^6.12.0",
     "@tanstack/react-router": "^1.127.9",
     "@tanstack/react-router-devtools": "^1.127.9",
     "framer-motion": "^12.23.6",
     "hono": "^4.8.5",
     "lodash": "^4.17.21",
+    "luxon": "^3.7.1",
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,6 +33,7 @@
     "@tanstack/router-plugin": "^1.127.9",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.20",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
