--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -10,7 +10,9 @@
     "@heroui/theme": "2.4.19",
     "@hono/zod-validator": "^0.7.1",
     "@hyper-fetch/core": "^7.2.5",
+    "@hyper-fetch/plugin-devtools": "^7.2.5",
     "@hyper-fetch/react": "^7.2.5",
+    "@hyper-fetch/sockets": "^7.2.5",
     "@prisma/adapter-d1": "^6.12.0",
     "@prisma/client": "^6.12.0",
     "@tanstack/react-router": "^1.127.9",
