--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -24,6 +24,7 @@
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-lite-youtube-embed": "^2.5.1",
     "uuid": "^11.1.0",
     "zod": "^4.0.5"
   },
