--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -4,6 +4,7 @@
     "current node"
   ],
   "dependencies": {
+    "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.3.1",
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.1",
@@ -19,6 +20,7 @@
     "@tanstack/react-router-devtools": "^1.127.9",
     "framer-motion": "^12.23.6",
     "hono": "^4.8.5",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "luxon": "^3.7.1",
     "prisma": "^6.12.0",
@@ -35,6 +37,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/router-plugin": "^1.127.9",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.20",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.8",
