--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.23.6",
     "hono": "^4.8.5",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.7.1",
     "prisma": "^6.12.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0",
@@ -60,7 +62,7 @@
   "name": "kill-tony",
   "private": true,
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "rimraf dist && tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
