--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -4,21 +4,21 @@
     "current node"
   ],
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@apollo/server": "^4.12.2",
+    "@as-integrations/cloudflare-workers": "^1.1.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.3.1",
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.1",
     "@heroui/theme": "2.4.19",
     "@hono/zod-validator": "^0.7.1",
-    "@hyper-fetch/core": "^7.2.5",
-    "@hyper-fetch/plugin-devtools": "^7.2.5",
-    "@hyper-fetch/react": "^7.2.5",
-    "@hyper-fetch/sockets": "^7.2.5",
     "@prisma/adapter-d1": "^6.12.0",
     "@prisma/client": "^6.12.0",
     "@tanstack/react-router": "^1.127.9",
     "@tanstack/react-router-devtools": "^1.127.9",
     "framer-motion": "^12.23.6",
+    "graphql": "^16.11.0",
     "hono": "^4.8.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
