--- a/apps/kill-tony/wrangler.jsonc
+++ b/apps/kill-tony/wrangler.jsonc
@@ -2,8 +2,10 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "assets": {
     "not_found_handling": "single-page-application",
+    "run_worker_first": ["/graphql"]
   },
   "compatibility_date": "2025-07-16",
+  "compatibility_flags": ["nodejs_compat"],
   "d1_databases": [
     {
       "binding": "DB",
