--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -17,9 +17,11 @@
     "@prisma/client": "^6.12.0",
     "@tanstack/react-router": "^1.127.9",
     "@tanstack/react-router-devtools": "^1.127.9",
+    "apollo3-cache-persist": "^0.15.0",
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
     "hono": "^4.8.5",
+    "idb-keyval": "^6.2.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
