--- a/apps/kill-tony/wrangler.jsonc
+++ b/apps/kill-tony/wrangler.jsonc
@@ -4,21 +4,21 @@
     "not_found_handling": "single-page-application",
     "run_worker_first": ["/graphql"]
   },
-  "compatibility_date": "2025-07-16",
+  "compatibility_date": "2025-07-17",
   "compatibility_flags": ["nodejs_compat"],
   "d1_databases": [
     {
       "binding": "DB",
       "database_id": "17c5f8bd-5b77-4e85-ac57-8a7a83809334",
-      "database_name": "kill-tony",
-    },
+      "database_name": "kill-tony"
+    }
   ],
   "main": "worker/index.ts",
   "name": "kill-tony",
   "observability": {
-    "enabled": true,
+    "enabled": true
   },
   "placement": {
-    "mode": "smart",
-  },
+    "mode": "smart"
+  }
 }
