--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -3,7 +3,8 @@
   "assets": {
     "binding": "ASSETS",
     "directory": "./public",
-    "not_found_handling": "single-page-application"
+    "not_found_handling": "single-page-application",
+    "run_worker_first": ["/blog"]
   },
   "compatibility_date": "2025-07-21",
   "d1_databases": [
