--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -4,7 +4,7 @@
     "binding": "ASSETS",
     "directory": "./public",
     "not_found_handling": "single-page-application",
-    "run_worker_first": ["/blog"]
+    "run_worker_first": ["/api/*", "/blog/*"]
   },
   "compatibility_date": "2025-07-21",
   "d1_databases": [
