--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,12 +12,12 @@
     "@eslint-react/eslint-plugin": "^1.52.3",
     "@eslint/css": "0.10.0",
     "@eslint/js": "^9.31.0",
-    "@eslint/json": "^0.13.0",
-    "@eslint/markdown": "^7.0.0",
+    "@eslint/json": "^0.13.1",
+    "@eslint/markdown": "^7.1.0",
     "@html-eslint/eslint-plugin": "^0.43.0",
     "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/eslint-plugin-router": "^1.125.0",
-    "@typescript-eslint/parser": "^8.37.0",
+    "@tanstack/eslint-plugin-router": "^1.129.7",
+    "@typescript-eslint/parser": "^8.38.0",
     "angular-eslint": "20.1.1",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
@@ -30,11 +30,11 @@
     "eslint-plugin-react-hooks": "^5.2.0-rc.1",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-sonarjs": "3.0.4",
-    "eslint-plugin-storybook": "^9.0.17",
-    "eslint-plugin-tailwindcss": "^3.18.2",
+    "eslint-plugin-storybook": "^9.0.18",
+    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "eslint-plugin-unicorn": "^60.0.0",
     "prettier": "^3.6.2",
-    "typescript-eslint": "^8.37.0"
+    "typescript-eslint": "^8.38.0"
   },
   "devDependencies": {
     "@ethang/markdown-generator": "^1.1.5",
@@ -42,9 +42,10 @@
     "@types/eslint-plugin-jsx-a11y": "^6.10.0",
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.0.15",
+    "@types/node": "^24.1.0",
     "browserslist-config-baseline": "^0.4.0",
     "lodash": "^4.17.21",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "zod": "^4.0.5"
   },
@@ -62,5 +63,5 @@
     "lint": "eslint . --fix && prettier src --write"
   },
   "type": "module",
-  "version": "22.16.0"
+  "version": "22.17.2"
 }
