--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -40,7 +40,8 @@
     "use-debounce": "^10.0.5",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "zod-prisma-types": "^3.2.4"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.11.0",
